<resources>
    <string name="app_name">Toronto Asian Art Museum Collection Management</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="museum">Toronto Asian Art Museum</string>
    <string name="welcome">Welcome to the</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_item">Delete Item</string>
    <string name="add_item">Add Item</string>
    <string name="back">Back</string>
    <string name="recyclerview">RecyclerView</string>
    <string name="scroller">Scroller</string>
    <string name="spinner">Spinner</string>
    <string name="manage_items">Manage Items</string>
    <string name="category">Category</string>
    <string name="period">Period</string>
    <string name="upload_item">Upload Image or Video</string>
    <string name="item_name">Item Name</string>
    <string name="view">View</string>
    <string name="report">Report</string>
    <string name="description">Description</string>
    <string name="generate_report">Generate a Report</string>
    <string name="search_go">Search</string>
    <string name="search_plural">Search Items</string>

    <string-array name="categories_array">
        <item>Jade</item>
        <item>Paintings</item>
        <item>Calligraphy</item>
        <item>Rubbings</item>
        <item>Bronze</item>
        <item>Brass</item>
        <item>Copper</item>
        <item>Gold and Silver</item>
        <item>Lacquer</item>
        <item>Enamels</item>
    </string-array>

    <string-array name="period_array">
        <item>Xia</item>
        <item>Shang</item>
        <item>Zhou</item>
        <item>Chuanqiu</item>
        <item>Zhanggou</item>
        <item>Qin</item>
        <item>Hang</item>
        <item>Shangou</item>
        <item>Ji</item>
        <item>South and North</item>
        <item>Shui</item>
        <item>Tang</item>
        <item>Liao</item>
        <item>Song</item>
        <item>Jin</item>
        <item>Yuan</item>
        <item>Ming</item>
        <item>Qing</item>
        <item>Modern</item>
    </string-array>
    <string name="upload_image">Upload Image</string>
    <string name="result">Result</string>
    <string name="lot">Lot</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="picture">Picture</string>
    <string name="display">String Result Based on </string>
    <string name="next_page">Next Page</string>
    <string name="search">Search Item</string>
    <string name="displayB">Display Items</string>
    <string name="genReport">Generate Report</string>

    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="have_account">Already have an account?</string>
    <string name="click_login">Press here to <u><b>Login</b></u>.</string>
    <string name="no_account">Don\'t have an account yet?</string>
    <string name="click_signup">Press here to <u><b>Sign Up</b></u>.</string>
    <string name="admin_box">Admin</string>
    <string name="adminPIN">Admin PIN</string>
    <string name="atleast">Password must be at least 6 characters</string>
    <string name="passwordMessage">For marking/testing purposes:\nAdmin PIN is <b>12345</b></string>

</resources>