<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="40dp">

    </TextView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#CCCCCC">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

                <TextView
                    android:padding="3dip"
                    android:text="@string/lot" />

                <TextView
                    android:padding="3dip"
                    android:text="@string/name" />

                <TextView
                    android:padding="3dip"
                    android:text="@string/category" />

                <TextView
                    android:padding="3dip"
                    android:text="@string/period" />

                <TextView
                    android:padding="3dip"
                    android:text="@string/picture" />

            </TableRow>
        </TableLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonView"
            style="@style/ButtonRY"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/view" />

        <Space
            android:layout_width="45dp"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonReport"
            style="@style/ButtonP"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/report" />

        <Space
            android:layout_width="45dp"
            android:layout_height="wrap_content" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonBack"
            style="@style/ButtonB"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/back" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonPrevPage"
            style="@style/ButtonG"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="Prev" />

        <EditText
            android:id="@+id/pageNumber"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:focusable="false"
            android:gravity="center"
            android:inputType="none" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonNextPage"
            style="@style/ButtonG"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="Next" />

    </LinearLayout>

</LinearLayout>
